public/css/stylesheet.css
@media screen and (min-width: 100px) and (max-width: 800px) {
    #main-parallax {
        /* The image used */
        background-image: url("/img/camp3.jpg");
      
        /* Set a specific height */
        height: 100vh;
        width: auto;
      
        /* Create the parallax scrolling effect */
        background-attachment: fixed;
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
    }
    
    #title_box{
        margin-top: 40vh;
    }
    
}

@media screen and (min-width: 801px) {
    #main-parallax {
        /* The image used */
        background-image: url("/img/camp3.jpg");
      
        /* Set a specific height */
        height: 80vh;
        width: auto;
      
        /* Create the parallax scrolling effect */
        background-attachment: fixed;
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
    }
    
    #title_box{
        margin-top: 30vh;
    }
}

@media screen and (min-height: 200px) and (max-height: 800px) {
    .margin-top-1{
        margin-top: 5vh;
    }
    
    .margin-top-2{
        margin-top: 10vh;
    }
    
    .margin-top-3{
        margin-top: 15vh;
    }
}

@media screen and (min-height: 801px){
    .margin-top-1{
        margin-top: 10vh;
    }
    
    .margin-top-2{
        margin-top: 20vh;
    }
    
    .margin-top-3{
        margin-top: 30vh;
    }
}

